[package]
name = "interceptor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An IP address stealer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }